--- a/fourCorners/Views/Base.lproj/Main.storyboard
+++ b/fourCorners/Views/Base.lproj/Main.storyboard
@@ -42,7 +42,7 @@
                                 <rect key="frame" x="227" y="513" width="242" height="392"/>
                             </imageView>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="FOURCORNERS" translatesAutoresizingMaskIntoConstraints="NO" id="obE-lg-XqY">
-                                <rect key="frame" x="82" y="445" width="250" height="16"/>
+                                <rect key="frame" x="82" y="354.5" width="250" height="197.00000000000006"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="250" id="zn5-BL-3Kd"/>
                                 </constraints>
@@ -88,50 +88,53 @@
             </objects>
             <point key="canvasLocation" x="1271.0144927536232" y="109.82142857142857"/>
         </scene>
-        <!--Settings View Controller-->
+        <!--Menu View Controller-->
         <scene sceneID="11a-Ez-w9r">
             <objects>
-                <viewController id="BHz-Bi-Yi8" customClass="SettingsViewController" customModule="fourCorners" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BHz-Bi-Yi8" customClass="MenuViewController" customModule="fourCorners" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="nG5-5k-FQM">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="How many players? " textAlignment="natural" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="v12-5D-DxK">
-                                <rect key="frame" x="93" y="235" width="228" height="29.5"/>
+                                <rect key="frame" x="106.5" y="250" width="201" height="25"/>
                                 <fontDescription key="fontDescription" name="SignPainterHouseBrush" family="SignPainter HouseBrush" pointSize="25"/>
                                 <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" spacing="30" translatesAutoresizingMaskIntoConstraints="NO" id="xER-vF-MuW">
-                                <rect key="frame" x="79.5" y="334.5" width="255" height="237"/>
+                                <rect key="frame" x="87.5" y="345" width="239" height="216"/>
                                 <subviews>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="wordWrap" translatesAutoresizingMaskIntoConstraints="NO" id="v2w-z7-NDG">
-                                        <rect key="frame" x="0.0" y="0.0" width="255" height="59"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="239" height="52"/>
                                         <fontDescription key="fontDescription" name="SignPainterHouseBrush" family="SignPainter HouseBrush" pointSize="40"/>
                                         <state key="normal" title="Two Players ">
                                             <color key="titleColor" red="1" green="0.2692915287618568" blue="0.1893893885535729" alpha="0.84705882352941175" colorSpace="custom" customColorSpace="displayP3"/>
                                         </state>
                                         <connections>
+                                            <action selector="twoPlayerButton:" destination="BHz-Bi-Yi8" eventType="touchUpInside" id="TwR-zE-w0r"/>
                                             <segue destination="AW2-pI-hdR" kind="show" identifier="settingsToTwoPlayersSegue" id="vIB-iE-UC1"/>
                                         </connections>
                                     </button>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="wordWrap" translatesAutoresizingMaskIntoConstraints="NO" id="8KB-dB-Ujg">
-                                        <rect key="frame" x="0.0" y="89" width="255" height="59"/>
+                                        <rect key="frame" x="0.0" y="82" width="239" height="52"/>
                                         <fontDescription key="fontDescription" name="SignPainterHouseBrush" family="SignPainter HouseBrush" pointSize="40"/>
                                         <state key="normal" title="Three Players ">
                                             <color key="titleColor" red="0.97066909069999996" green="0.8148091435" blue="0.37241569159999999" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                         </state>
                                         <connections>
+                                            <action selector="threePlayerButton:" destination="BHz-Bi-Yi8" eventType="touchUpInside" id="jS3-NK-6gA"/>
                                             <segue destination="eTN-ZF-Sxj" kind="show" identifier="settingsToThreePlayersSegue" id="HbL-v4-PBD"/>
                                         </connections>
                                     </button>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="wordWrap" translatesAutoresizingMaskIntoConstraints="NO" id="hXk-Pj-SJK">
-                                        <rect key="frame" x="0.0" y="178" width="255" height="59"/>
+                                        <rect key="frame" x="0.0" y="164" width="239" height="52"/>
                                         <fontDescription key="fontDescription" name="SignPainterHouseBrush" family="SignPainter HouseBrush" pointSize="40"/>
                                         <state key="normal" title="Four Players ">
                                             <color key="titleColor" red="0.059087293280000001" green="0.52018559639999995" blue="0.1031346989" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                         </state>
                                         <connections>
+                                            <action selector="fourPlayerButton:" destination="BHz-Bi-Yi8" eventType="touchUpInside" id="IGY-pk-5f8"/>
                                             <segue destination="BYZ-38-t0r" kind="show" identifier="settingsToFourPlayersSegue" id="I1a-qP-j4n"/>
                                         </connections>
                                     </button>
@@ -199,10 +202,10 @@
                                 </constraints>
                             </imageView>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" alignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="F2e-hU-IRa">
-                                <rect key="frame" x="20" y="369" width="374" height="168"/>
+                                <rect key="frame" x="20" y="359" width="374" height="188"/>
                                 <subviews>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Rbn-rY-40v" userLabel="Start Game Button">
-                                        <rect key="frame" x="151" y="0.0" width="72" height="42"/>
+                                        <rect key="frame" x="150.5" y="0.0" width="73" height="47"/>
                                         <fontDescription key="fontDescription" name="SignPainterHouseBrush" family="SignPainter HouseBrush" pointSize="30"/>
                                         <state key="normal" title="Start ">
                                             <color key="titleColor" red="1" green="0.26929152880000001" blue="0.18938938860000001" alpha="0.84705882349999995" colorSpace="custom" customColorSpace="displayP3"/>
@@ -213,13 +216,13 @@
                                         </connections>
                                     </button>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="promptLabel" textAlignment="center" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gbx-KX-LnV">
-                                        <rect key="frame" x="110.5" y="42" width="153.5" height="42"/>
+                                        <rect key="frame" x="101.5" y="47" width="171" height="47"/>
                                         <fontDescription key="fontDescription" name="SignPainterHouseBrush" family="SignPainter HouseBrush" pointSize="30"/>
                                         <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="TO2-Fq-OT2">
-                                        <rect key="frame" x="113" y="84" width="148" height="42"/>
+                                        <rect key="frame" x="102.5" y="94" width="169" height="47"/>
                                         <fontDescription key="fontDescription" name="SignPainterHouseBrush" family="SignPainter HouseBrush" pointSize="30"/>
                                         <state key="normal" title="Next Round ">
                                             <color key="titleColor" red="0.97066909069999996" green="0.8148091435" blue="0.37241569159999999" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
@@ -230,7 +233,7 @@
                                         </connections>
                                     </button>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="HNJ-MC-6Ml" userLabel="Exit Button">
-                                        <rect key="frame" x="159.5" y="126" width="55" height="42"/>
+                                        <rect key="frame" x="157.5" y="141" width="59" height="47"/>
                                         <fontDescription key="fontDescription" name="SignPainterHouseBrush" family="SignPainter HouseBrush" pointSize="30"/>
                                         <state key="normal" title="Exit ">
                                             <color key="titleColor" red="0.059087293280000001" green="0.52018559639999995" blue="0.1031346989" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
